pasarela de pagos funcionando enviando datos al back

--- a/Client/index.html
+++ b/Client/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/neoshoplogo.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NeoShop</title>
-    <script src="https://www.paypal.com/sdk/js?client-id=Aa8T4ebmanAzvpHORvNtT95toNPHUc6KaAMQvW4x41RIU37gEiiUd1UkZYR6D8URTGC6J8OyncugI8Ma&"></script>
+    <!-- <script src="https://www.paypal.com/sdk/js?client-id=Aa8T4ebmanAzvpHORvNtT95toNPHUc6KaAMQvW4x41RIU37gEiiUd1UkZYR6D8URTGC6J8OyncugI8Ma&"></script> -->
   </head>
   <body>
     <div id="root"></div>
